2001-12-18  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (BinaryNumericPromotion): Improve formatting and
	delete useless conditionals.
	* src/bytecode.h (IsNull): Delete dead code.
	(IsOne): Add for better optimizing.
	(EmitCastExpression): Add argument to track optimized expression. 
	* src/bytecode.cpp: Fix incorrect code generation when optimizing
	&, *, <<, >>, and ?:, also perform more optimizations of binary
	operations - bugs 2509, 2513, patch 249.

2001-12-18  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessAmbiguousName): Report invalid package name
	sooner, rather than creating and discarding the package. As a
	result, more error messages can detect mispelled names.

2001-12-14  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessMethodName): Fix another core dump from my
	recent patching frenzy.

2001-12-13  Mo DeJong  <supermo@bayarea.net>

	* src/zip.cpp (Zip): Avoid core dump when zip file on CLASSPATH
	does not exist by checking to make sure the zipbuffer has been
	allocated - patch 247.
	* src/error.cpp (PrintCANNOT_OPEN_ZIP_FILE): Improve message give
	to user when a zip file cannot be opened. The file could be
	invalid but it could also just not exist - patch 248.

2001-12-12  Chris Abbey  <jikes@cabbey.net>
	    Eric Blake  <ebb9@email.byu.edu>

	* src/zip.cpp: Reformat to 80 columns.

2001-12-12  Mo DeJong  <supermo@bayarea.net>

	* src/zip.cpp (Zip, ReadDirectory): Use constants instead of hard
	coded numbers. If a valid END header can't be found at the end of
	the file we need to scan the file backwards. This matches the
	implementation of the command line unzip utility. The Zip file
	format is so brain damaged that this is the only option.
	* src/zip.h (Zip, IsValid): Add enum constants for ZIP header
	sizes and magic numbers - bug 261, patch 246.

2001-12-12  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (AppendString): Fix regression from patch 237,
	when doing string concatenation with primitives.
